--- a/app/src/main/res/layout/add_note_fragment.xml
+++ b/app/src/main/res/layout/add_note_fragment.xml
@@ -12,7 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/date_text_view"
@@ -27,13 +27,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
+            android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="@id/date_text_view"
             app:layout_constraintStart_toStartOf="@id/date_text_view"
-            app:layout_constraintTop_toBottomOf="@id/date_text_view"
-            android:id="@+id/linear_layout">
+            app:layout_constraintTop_toBottomOf="@id/date_text_view">
 
             <EditText
                 android:id="@+id/title_text_view"
@@ -43,12 +43,12 @@
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:padding="10dp"
-                android:hint="Title"
-                android:gravity="top"
                 android:background="@drawable/edit_text_styling"
-                android:text="@={viewModel.newNotes.title}"
+                android:gravity="top"
+                android:hint="Title"
                 android:inputType="text"
+                android:padding="10dp"
+                android:text="@={viewModel.newNotes.title}"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
@@ -67,39 +67,91 @@
             android:inputType="textMultiLine"
             android:padding="10dp"
             android:text="@={viewModel.newNotes.description}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
 
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linear_layout"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/linear_layout" />
+
+        <LinearLayout
+            android:id="@+id/imageButtonLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:orientation="horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/description_edit_text"
+            android:padding="10dp"
+            android:layout_margin="16dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/from_gallery_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="Gallery" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:text="OR"
+                    android:textAlignment="center"/>
+
+                <Button
+                    android:id="@+id/capture_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="Capture" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+
+            />
+<!--            app:addSrc="@{viewModel.newNotes.photo}"-->
+
+            <!--            app:srcCompat="@drawable/edit_text_styling"-->
+        </LinearLayout>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/save_button"
-            android:onClick="@{() -> viewModel.saveNote()}"
-            app:layout_constraintTop_toBottomOf="@id/description_edit_text"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/go_back"
-            android:layout_marginTop="16dp"
-            android:text="Save"
-            android:textColor="@color/white"
-            android:background="@color/drawable_color"/>
-
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/go_back"
-            android:onClick="@{ () ->viewModel.goBack() }"
-            app:layout_constraintTop_toBottomOf="@id/description_edit_text"
-            app:layout_constraintStart_toEndOf="@id/save_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:background="@color/drawable_color"
+            android:onClick="@{() -> viewModel.saveNote()}"
+            android:text="Save"
+            android:enabled="false"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toStartOf="@id/go_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageButtonLinearLayout" />
+
+        <Button
+            android:id="@+id/go_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:background="@color/drawable_color"
+            android:onClick="@{ () ->viewModel.goBack() }"
             android:text="GoBack"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/save_button"
+            app:layout_constraintTop_toBottomOf="@+id/imageButtonLinearLayout" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
