--- a/app/src/main/res/layout/list_item_all_notes.xml
+++ b/app/src/main/res/layout/list_item_all_notes.xml
@@ -18,6 +18,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+
+        android:onClick="@{ () -> clickListener.onClick(entity)}"
+
+
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -91,6 +95,7 @@
                     android:text="Description"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary"
+                    android:lines="2"
                     android:textSize="18sp" />
 
                 <LinearLayout
