--- a/app/src/main/res/layout/notes_description_fragment.xml
+++ b/app/src/main/res/layout/notes_description_fragment.xml
@@ -78,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/save_button"
+            android:enabled="false"
             android:onClick="@{() -> viewModel.saveCurrentNote()}"
             app:layout_constraintTop_toBottomOf="@id/description_edit_text"
             app:layout_constraintStart_toStartOf="parent"
@@ -102,6 +103,15 @@
             android:layout_marginTop="16dp"
             android:text="GoBack"
             android:textColor="@color/white"
+            />
+        <ImageView
+            android:id="@+id/displayImage"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_constraintTop_toBottomOf="@id/go_back"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:addSrc="@{viewModel.currentNote.photo}"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
